--- a/style.css
+++ b/style.css
@@ -27,6 +27,7 @@
 }
 
 
+
 .cabeza{
 position: absolute;
 width: 200px;
@@ -39,6 +40,8 @@ right: 0;
 border-radius: 50% 50% 50% 50% / 40% 40% 40% 40%
 
 }
+
+
 
 .derecho {
   position: relative;
@@ -90,6 +93,43 @@ right: 0;
 bottom: -12em;
 border-radius: 30% 30% 30% 30% / 30% 30% 30% 30%;
 }
+.tableta {
+  position: absolute;
+  width: 158px;
+  height: 0px;
+  background-color: #black;
+  border: thin solid black;
+  z-index: -4;
+  margin: 0 auto;
+  left: 0;
+  right: 0;
+  bottom: 3em;
+}
+.tableta1 {
+  position: absolute;
+  width: 0px;
+  height: 158px;
+  background-color: #black;
+  border: thin solid black;
+  z-index: -4;
+  margin: 0 auto;
+  left: 0;
+  right: 0;
+  bottom: -0em;
+}
+.tableta2 {
+  position: absolute;
+  width: 158px;
+  height: 0px;
+  background-color: #black;
+  border: thin solid black;
+  z-index: -4;
+  margin: 0 auto;
+  left: 0;
+  right: 0;
+  bottom: 6em;
+}
+
 
 
 .brazo{
@@ -179,4 +219,26 @@ left: -10em;
 
   left: -7em;
   bottom: 5em;
+}
+.pie{
+  position: relative;
+    width: 35px;
+    height: 35px;
+    background-color: #7fd3f7;
+    border: thin solid black;
+    border-radius: 50%;
+    top: 14em;
+    left: 10.3em;
+    right: 0em
+}
+.pie1{
+  position: relative;
+    width: 35px;
+    height: 35px;
+    background-color: #7fd3f7;
+    border: thin solid black;
+    border-radius: 50%;
+    top: 11.7em;
+    left: 17.4em;
+    right: 0em
 }
